# vycode

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml  release.yml  rust.yml
docs/: BUILD.md  INSTALLATION.md  USAGE.md
src/: app.rs  main.rs
src/commands/: handler.rs  mod.rs
src/config/: encryption.rs  mod.rs
src/context/: memory.rs  mod.rs
src/providers/: anthropic.rs  custom.rs  deepseek.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  streaming.rs
src/session/: mod.rs
src/tools/: browser.rs  db.rs  discord.rs  docker.rs  docs.rs  file_read.rs  file_write.rs  git.rs  github.rs  hass.rs  mcp.rs  mod.rs  omni.rs  runner.rs  search.rs  shell.rs  ssh.rs  telegram.rs
src/ui/: logo.rs  mod.rs  renderer.rs  theme.rs  widgets.rs
